Set subject results from autosuggest in quotes for search
Former-commit-id: 73871e13470eb7279090e75462ad09efb5edc9c6

--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -260,7 +260,7 @@ All rights reserved. Use is subject to license terms.
 								</h:selectOneMenu>
 							</h:panelGroup>
 						
-							<h:inputText id="inpClassificationValue" styleClass="large_txtInput subjectSuggest" value="#{criterion.searchString}" />
+							<h:inputText id="inpClassificationValue" styleClass="large_txtInput subjectSuggestQuotes" value="#{criterion.searchString}" />
 						</h:panelGroup>
 					</h:panelGroup>
 					
