PUBMAN-2626 fixed: Advanced Search: the javascript label for date is too short, the last number is invisible
Former-commit-id: d4d9fb8e51fe033a3ed65d844bbdbade2a0e6a4f

--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -212,11 +212,11 @@ All rights reserved. Use is subject to license terms.
 					<h:panelGroup styleClass="free_area0 endline" rendered="#{criterion.searchCriterion.displayType == 'DATE'}">
 						<h:panelGroup styleClass="free_area0">
 							<h:outputLabel id="lblStartDateFirst" styleClass="small_label label_keyword" for="startDateFirst" value="#{lbl.adv_search_lblFrom}: "/>
-							<h:inputText styleClass="medium_txtInput dateJSInput" id="startDateFirst" value="#{criterion.from}" style="width:7.7272em;" />
+							<h:inputText styleClass="large_txtInput dateJSInput" id="startDateFirst" value="#{criterion.from}" />
 						</h:panelGroup>
 						<span class="free_area0 clear">
 							<h:outputLabel id="lblEndDateFirst" styleClass="small_label label_keyword" for="endDateFirst" value="#{lbl.adv_search_lblTo}: "/>
-							<h:inputText styleClass="medium_txtInput dateJSInput" id="endDateFirst" value="#{criterion.to}" style="width:7.7272em;" />
+							<h:inputText styleClass="large_txtInput dateJSInput" id="endDateFirst" value="#{criterion.to}" />
 						</span>
 						<script type="text/javascript">
 							$pb('.dateJSInput').attr("placeholder", "YYYY-MM-DD");
