--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -139,7 +139,7 @@
 					<div class="xHuge_area0 xTiny_marginLExcl endline">
 						<div class="xHuge_area0 endline marginTExcl6p">						
 							<h:outputLink id="lnkCitationURLTme" target="_blank" value="#{ViewItemFull.citationURL}/component/#{file.file.reference.objectId}/#{file.file.name}?mode=tme" rendered="#{!ViewItemFull.isStateWithdrawn and (file.isVisible || ViewItemFull.isOwner || ViewItemFull.isModerator || ViewItemFull.isPrivilegedViewer || file.isAudience)}">
-								<span class="std_imgBtn viewFileIcon tiny_marginLExcl"></span>
+								<span class="std_imgBtn viewFileIcon"></span>
 								<h:outputText value="#{lbl.ViewItemFull_lblViewFulltext}" />
 							</h:outputLink>
 						</div>
