--- a/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
+++ b/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
@@ -296,7 +296,7 @@
 					</span>
 					<div id="ccContentHelper" class="ccContentHelper noDisplay">&#160;</div>
 					<span class="xHuge_area0 xTiny_marginLExcl endline"> <p:fileUpload
-							fileUploadListener="#{EasySubmission.fileUploaded}"
+							listener="#{EasySubmission.fileUploaded}"
 							label="#{lbl.EditItem_btAddFile}" multiple="true" id="inpFile"
 							styleClass="quad_area1 fileInput" fileLimit="50" update="files"
 							process="@form" dragDropSupport="true" auto="true"
