--- a/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
+++ b/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
@@ -23,7 +23,7 @@
 	
 	<link rel="search" type="application/opensearchdescription+xml" title="#{lbl.openSearch_desc} #{lbl.openSearch_shortDesc} #{Header.type}" href="#{ApplicationBean.pubmanInstanceUrl}#{ApplicationBean.appContext}search/OpenSearch.jsp" />
 	
-	<h:outputScript library="javax.faces" name="jsf.js"/>
+	<h:outputScript library="jakarta.faces" name="jsf.js"/>
 	<h:outputScript library="primefaces" name="jquery/jquery.js"/>
 	<h:outputScript name="scripts.js"/>
 	<h:outputScript name="commonJavaScript/eSciDoc_javascript.js"/>
