[INGE-700] - OA Status "Not specified" and new option "Closed Access"

--- a/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
+++ b/pubman_presentation/src/main/webapp/editItem/FilesGroup.jspf
@@ -156,7 +156,7 @@
 									value="#{fileVar.file.metadata.oaStatus}"
 									onfocus="updateSelectionBox(this);"
 									onchange="this.form.submit()">
-									<f:selectItems value="#{EditItem.oaStatuses}" />
+									<f:selectItems value="#{EditItem.oaStatusesFiles}" />
 								</h:selectOneMenu>
 							</h:panelGroup>
 						</h:panelGroup>
