--- a/pubman_presentation/src/main/webapp/viewItem/LocatorsGroup.jspf
+++ b/pubman_presentation/src/main/webapp/viewItem/LocatorsGroup.jspf
@@ -39,7 +39,7 @@
 								value=" (#{locator.contentCategoryLabel})" />
 						</span>
 						<h:panelGroup id="imgLocatorGroupOpenAccess"
-							rendered="#{locator.file.metadata.oaStatus!=null}">
+							rendered="#{locator.file.metadata.oaStatus!=null and locator.file.metadata.oaStatus.name().toLowerCase() != 'closed_access'}">
 							<img src="../resources/images/open_access_#{locator.file.metadata.oaStatus.name().toLowerCase() }_31.png"
 									 class="xSmall_imgImg " align="left" title="#{locator.file.metadata.oaStatus.name().toLowerCase() == 'gold' ? tip.ViewItem_imgOa_gold :
 									 	locator.file.metadata.oaStatus.name().toLowerCase() == 'green' ? tip.ViewItem_imgOa_green :
