INGE-706	 Pubman Blog Integration does not work anymore due to new licensing conditions

--- a/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
+++ b/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
@@ -19,7 +19,7 @@
 								pubmanBlogUrl,
 								{
 									ssl : true,
-									host: "feedrapp.info",
+									host: "#{ApplicationBean.pubmanBlogBaseUrl}",
 									limit : 4,
 									dateFormatFunction : function(date) {
 										return $.format
