new text for openAccessMail

--- a/pubman_presentation/src/main/resources/OpenAccessMailPIK.vm
+++ b/pubman_presentation/src/main/resources/OpenAccessMailPIK.vm
@@ -9,36 +9,29 @@
 
 <div align="center">${citation}</div>
 
-Liebe*r Autor*in,<br/>
-<p>„Maximize research usage and impact by maximizing user access to it.“</p>
-<p>Das PIK und die Leibniz-Gemeinschaft fördern „Open Access“. Unbeschränkter, offener Zugang zu einer Publikation über das Internet erhöhen deutlich die Wahrnehmung des Aufsatzes durch Ihre Kolleg*innen. Dies bedeutet in der Konsequenz höheren Impakt Ihrer Forschungsergebnisse.</p>
-<p>Sie haben in mit Verlagen geschlossenen Verträgen bei Subskriptionszeitschriften zwar alle Verwertungsrechte an diese abgegeben, allerdings gewähren Verlage unter Umständen pauschal oder unter bestimmten Bedingungen Zweitverwertungsrechte.</p> 
-<p>Seit dem 1.1.2014 ermöglicht das deutsche Urheberrecht darüber hinaus ein sogenanntes Zweitverwertungsrecht, das Ihnen als Autor*in das Recht gibt, eine ‚akzeptierte Manuskriptversion‘ nach 12 Monaten offen zugänglich zu machen. „Auch dann, wenn … dem Verleger … ein ausschließliches Nutzungsrecht eingeräumt wurde“ (§ 38 Abs. 4 UrhG).</p>
-<p>Konkret bedeutet das, dass es möglich ist, die "Final Draft"-Version ihrer Aufsätze im Rahmen unserer Publikationsdatenbank (Institutional Repository, <a href="https://publications.pik-potsdam.de/">https://publications.pik-potsdam.de/</a>) ein weiteres Mal zu veröffentlichen (der Grüne Weg des Offenen Zugangs) und damit den Volltext für Suchmaschinen sehr gut findbar dauerhaft im Internet zur Verfügung zu stellen.</p> 
-<p>Als “Final Draft“ gilt der Zustand Ihrer Aufsätze nach dem Peer Review. Allerdings ist es in der Regel nicht erlaubt, die endgültige, verlagsformatierte PDF-Version zur Zweitveröffentlichung zu nutzen. Anders ausgedrückt: benötigt wird eine Version ihrer Aufsätze, die inhaltlich der in der Zeitschrift veröffentlichten Version entspricht, sich aber äußerlich von der verlagsformatierten Version unterscheidet (z.B. Ihr finales „Word“-Dokument oder ähnliches).</p> 
-<p>Bitte senden Sie eine solche Version Ihres Aufsatzes zur Zweitveröffentlichung an die folgende Mailadresse: <a href="mailto:library@pik-potsdam.de">library@pik-potsdam.de</a> und sorgen Sie damit für eine breitere Wahrnehmung und damit die Chance auf höhere Zitationsraten Ihrer Artikel.</p> 
-<br/>
-Für Rückfragen stehen wir natürlich gerne zur Verfügung.<br/> 
-Ihre Bibliothek<br/><br/>
-
-Weitere Informationen finden Sie unter:<br/> 
-<a href="https://www.leibniz-openscience.de/">https://www.leibniz-openscience.de/</a>   - Leibniz-Forschungsverbund Open Science<br/>
-<a href="https://www.pik-potsdam.de/intranet/scientific-life-pik/good-practice/pik-open-access-policy_sept-2018">https://www.pik-potsdam.de/intranet/scientific-life-pik/good-practice/pik-open-access-policy_sept-2018</a>   - PIK Open Access Policy
-<br/><br/><br/><br/>
 Dear author,<br/>
-<p>„Maximize research usage and impact by maximizing user access to it.“</p>
-<p>PIK and Leibniz Association support ‚Open Access‘. Open access maximizes the visibility of your work. This means also a potential higher impact of your research results.</p>
-<p>With signing a contract with publishers of subscription journals, normally you give away all rights for re-use. Often publishers grant you some rights to republish your work but apply restrictions.</p> 
-<p>Furthermore the German Copyright law since 01.01.2014 grants you as an author the right to make your final manuscript version accessible 12 month after publication (§ 38 Abs. 4 UrhG).</p>
-<p>This means in many cases we can make your work accessible, mostly as ‘final draft’ (<a href="http://bib.telegrafenberg.de/en/publishing/open-access/final-draft/">http://bib.telegrafenberg.de/en/publishing/open-access/final-draft/</a>) via our institutional repository, the PIK publication database <a href="https://publications.pik-potsdam.de/">https://publications.pik-potsdam.de/</a>.</p>
-<p>Please send  a final draft version of your article to <a href="mailto:library@pik-potsdam.de">library@pik-potsdam.de</a></p>
-<p>The library will take care of legal restrictions and make your work, if possible, persistently open accessible worldwide.</p>
-<br/>
-Please contact us for more information.<br/>
-Your library<br/><br/>
+<p>In order to make your publications visible in the sense of Open Access, we will deposit them in our publication database PIKpublic (<a href="https://publications.pik-potsdam.de/">https://publications.pik-potsdam.de</a>). The basis for this is the secondary publication right according to § 38 para. 4 of the German Copyright Law. For this we require the accepted manuscript version (final draft) of your article.</p>
+<p>The Leibniz Association is committed to fostering and actively advancing the idea of Open Access. In this sense, the PIK Publication Policy recommends explicitly to choose Green Open Access.</p>
+<p>Please send your final accepted manuscript to <a href="mailto:library@pik-potsdam.de">library@pik-potsdam.de</a></p> 
 
-For more information:<br/>
-<a href="https://www.leibniz-openscience.de/">https://www.leibniz-openscience.de/</a>   - Leibniz Research Alliance Open Science<br/>
-<a href="https://bib.telegrafenberg.de/publizieren/open-access/">https://bib.telegrafenberg.de/publizieren/open-access/</a>
+<p>For further information please contact us.<br/>
+Your library<br/></p> 
+
+<p>You can find more information at:<br/> 
+<a href="https://www.leibniz-openscience.de/">https://www.leibniz-openscience.de/</a><br/>
+<a href="https://bib.telegrafenberg.de/en/publishing/open-access">https://bib.telegrafenberg.de/en/publishing/open-access</a></p>
+<br/><br/>
+
+Liebe*r Autor*in,<br/>
+<p>um Ihre Publikationen im Sinne von Open Access sichtbar zu machen, stellen wir diese als Zweitveröffentlichung über unsere Publikationsdatenbank PIKpublic (<a href="https://publications.pik-potsdam.de/">https://publications.pik-potsdam.de</a>) zur Verfügung. Grundlage hierfür ist das Zweitveröffentlichungsrecht nach § 38 Abs. 4 UrhG. Dazu benötigen wir die akzeptierte Manuskriptversion (Final Draft) Ihres Artikels.</p>
+<p>Die Leibniz-Gemeinschaft hat sich verpflichtet, den Open-Access-Gedanken aktiv zu fördern und voranzutreiben. In diesem Sinne empfiehlt die Publication Policy des PIK ausdrücklich Green Open Access.</p>
+<p>Senden Sie die akzeptierte Manuskriptversion bitte an <a href="mailto:library@pik-potsdam.de">library@pik-potsdam.de</a></p>
+
+<p>Für Rückfragen stehen wir natürlich gern zur Verfügung. <br>
+    Ihre Bibliothek<br/></p>
+
+<p>Weitere Informationen finden Sie unter:<br/>
+    <a href="https://www.leibniz-openscience.de/">https://www.leibniz-openscience.de/</a><br/>
+    <a href="https://bib.telegrafenberg.de/publizieren/open-access">https://bib.telegrafenberg.de/publizieren/open-access</a></p>
 </body>
 </html>
